<resources>
    <string name="app_name">Shows</string>
    <string name="average_for_show">%1$d REVIEWS, %2$.2f AVERAGE</string>
    <string name="write_a_review">Write a review</string>
    <string name="your_review">Your review…</string>
    <string name="submit">Submit</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in</string>
    <string name="shows">Shows</string>
    <string name="reviews">Reviews</string>
    <string name="empty_state">empty state</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing. Get it?</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat password</string>
    <string name="no_reviews_available">No reviews available!</string>
    <string name="incorrect_email_or_password">Incorrect email or password!</string>
</resources>