<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/top_left"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/top_right"/>

    <ImageView
        android:id="@+id/triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="180dp"
        android:layout_marginStart="56dp"
        android:src="@drawable/triangle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/triangle"
        android:layout_marginTop="180dp"
        android:layout_marginStart="8dp"
        android:textSize="30sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/shows"/>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/selector_input_box"
        app:hintTextColor="@color/white"
        android:hint="@string/email" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEdit"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#3D1D72"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/selector_input_box"
        app:hintTextColor="@color/white"
        android:hint="@string/password" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#3D1D72"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/selector_input_box"
        app:hintTextColor="@color/white"
        android:hint="@string/repeat_password" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        android:backgroundTint="#BBBBBB"
        android:textAllCaps="false"
        android:clickable="false"
        android:enabled="false"
        android:text = "@string/register" />

</androidx.constraintlayout.widget.ConstraintLayout>