<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/showName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:layout_marginHorizontal="24dp"
                android:textSize="28sp"
                tools:text="The Office" />

            <ImageView
                android:id="@+id/showImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                tools:src="@drawable/ic_the_office" />

            <TextView
                android:id="@+id/showDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:lines="3"
                android:textSize="17sp"
                tools:text="The Office is an American mockumentary sitcom television series that depicts the everyday work lives of office employees in the Scranton, Pennsylvania, branch of the fictional Dunder Mifflin Paper Company. It aired on NBC from March 24, 2005, to May 16, 2013, lasting a total of nine seasons." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto"
                android:textSize="24sp"
                android:text="@string/reviews" />

            <TextView
                android:id="@+id/reviewsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3 reviews, 3.63 average"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp" />

            <RatingBar
                android:id="@+id/showRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:isIndicator="true"
                android:numStars="5"
                tools:rating="5"
                android:stepSize="0.1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                tools:listitem="@layout/view_review_item" />

            <TextView
                android:id="@+id/reviewsEmptyState"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_reviews_available" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:layout_margin="20dp"
                android:layout_marginBottom="30dp"
                style="@style/buttonStyle"
                android:text = "@string/write_a_review"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>